--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = biteshaq
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.biteshaq
+PRODUCT_BUNDLE_IDENTIFIER = com.r2am9d.biteshaq
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2022 Biteshaq. All rights reserved.
