--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.r2am9d.biteshaq">
+    package="com.r2am9d.apps.biteshaq">
    <application
         android:label="Biteshaq"
         android:name="${applicationName}"
