--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  rename: ^2.0.1
   flutter_app_name: ^0.1.0
   change_app_package_name: ^1.1.0
 
