--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   flutter_config: ^2.0.0
   flutter_bloc: ^8.1.1
   equatable: ^2.0.5
+  beamer: ^1.5.2
+  salomon_bottom_bar: ^3.3.1
+  font_awesome_flutter: ^10.1.0
 
 dev_dependencies:
   flutter_test:
