--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,11 @@ dependencies:
   equatable: ^2.0.5
   beamer: ^1.5.2
   salomon_bottom_bar: ^3.3.1
-  font_awesome_flutter: ^10.1.0
+  font_awesome_flutter: '>= 4.7.0'
+
+dependency_overrides:
+  font_awesome_flutter:
+    path: ./packages/font_awesome_flutter
 
 dev_dependencies:
   flutter_test:
