--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   beamer: ^1.5.2
   salomon_bottom_bar: ^3.3.1
   font_awesome_flutter: '>= 4.7.0'
+  cached_network_image: ^3.2.1
+  badges: ^2.0.3
+  flag: ^6.0.0
+  flutter_hooks: ^0.18.5+1
 
 dependency_overrides:
   font_awesome_flutter:
