--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   badges: ^2.0.3
   flag: ^6.0.0
   flutter_hooks: ^0.18.5+1
+  connectivity_plus: ^2.1.0
 
 dependency_overrides:
   font_awesome_flutter:
