--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flag: ^6.0.0
   flutter_hooks: ^0.18.5+1
   connectivity_plus: ^2.1.0
+  drift: ^2.1.0
 
 dependency_overrides:
   font_awesome_flutter:
@@ -59,6 +60,9 @@ dev_dependencies:
   rename: ^2.0.1
   flutter_app_name: ^0.1.0
   change_app_package_name: ^1.1.0
+  build_test: ^2.1.5
+  build_runner: ^2.2.0
+  build_verify: ^3.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
