--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -84,4 +84,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation 'com.google.android.gms:play-services-ads:21.1.0'
 }
