--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,6 +58,7 @@ android {
         targetSdkVersion project.env.get("TARGET_SDK").toInteger()
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     signingConfigs {
@@ -84,5 +85,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'com.google.android.gms:play-services-ads:21.1.0'
+    implementation "com.google.android.gms:play-services-ads:21.1.0"
+    implementation "androidx.multidex:multidex:2.0.1"
 }
