--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
 
   # Plugins
   connectivity_plus: ^2.1.0
+  package_info_plus: ^1.4.3+1
 
 dependency_overrides:
   font_awesome_flutter:
@@ -84,13 +85,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-
-flutter_icons:
-  android: true
-  ios: true
-  image_path: "assets/logos/logo.png"
-  adaptive_icon_foreground: "assets/logos/foreground.png"
-  adaptive_icon_background: "assets/logos/background.png"
 
 flutter_native_splash:
   image: "assets/logos/logo.png"
