--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -102,8 +102,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "com.google.android.gms:play-services-ads:21.1.0"
 
-    implementation "com.google.firebase:firebase-appcheck-debug:16.0.1"
-
     implementation platform("com.google.firebase:firebase-bom:30.4.0")
+
+    implementation "com.google.firebase:firebase-appcheck-debug"
     implementation "com.google.firebase:firebase-appcheck-playintegrity"
 }
