--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   # Plugins
   connectivity_plus: ^2.1.0
   package_info_plus: ^1.4.3+1
+  permission_handler: ^10.0.0
 
 dependency_overrides:
   font_awesome_flutter:
