Fixed ios safearea bug, added card_swiper & tts dependencies

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # UI/UX
   flag: ^6.0.0
   badges: ^2.0.3
+  card_swiper: ^2.0.4
   json_theme: ^4.0.1+1
   cupertino_icons: ^1.0.5
   salomon_bottom_bar: ^3.3.1
@@ -62,6 +63,7 @@ dependencies:
   google_mobile_ads: ^2.0.1
 
   # Plugins
+  flutter_tts: ^3.5.3
   connectivity_plus: ^2.1.0
   package_info_plus: ^1.4.3+1
   permission_handler: ^10.0.0
