--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,12 +61,15 @@ dependencies:
   firebase_core: ^1.21.1
   firebase_app_check: ^0.0.7
   google_mobile_ads: ^2.0.1
+  firebase_messaging: ^13.0.1
 
   # Plugins
   flutter_tts: ^3.5.3
   connectivity_plus: ^2.1.0
   package_info_plus: ^1.4.3+1
   permission_handler: ^10.0.0
+  flutter_local_notifications: ^9.9.1
+  rxdart: ^0.27.5
 
 dependency_overrides:
   font_awesome_flutter:
