--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   package_info_plus: ^1.4.3+1
   permission_handler: ^10.0.0
   flutter_local_notifications: ^9.9.1
+  flutter_secure_storage: ^6.0.0
 
 dependency_overrides:
   font_awesome_flutter:
