--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -12,6 +12,9 @@ include: package:flutter_lints/flutter.yaml
 analyzer:
   exclude:
     - packages/**
+  errors:
+    todo: ignore
+    
 
 linter:
   # The lint rules applied to this project can be customized in the
