--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   json_theme: ^4.0.1+1
   auto_animated: ^3.1.0
   cupertino_icons: ^1.0.5
+  animated_shimmer: ^1.0.0
   salomon_bottom_bar: ^3.3.1
   cached_network_image: ^3.2.1
   font_awesome_flutter: '>= 4.7.0'
