Added loading_icon_button dependency

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cupertino_icons: ^1.0.5
   animated_shimmer: ^1.0.0
   salomon_bottom_bar: ^3.3.1
+  loading_icon_button: ^0.0.3
   cached_network_image: ^3.2.1
   font_awesome_flutter: '>= 4.7.0'
 
