--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,6 +1,9 @@
 # Uncomment this line to define a global platform for your project
 # platform :ios, '11.0'
 
+# Flutter Inappwebview fix
+# config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '14.0'
+
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
