--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,11 +74,17 @@ dependencies:
   permission_handler: ^10.0.0
   flutter_secure_storage: ^6.0.0
   youtube_player_flutter: ^8.1.0
+  flutter_inappwebview: ^5.4.3+7
   flutter_local_notifications: ^9.9.1
 
 dependency_overrides:
   font_awesome_flutter:
     path: ./packages/font_awesome_flutter
+  flutter_inappwebview:
+    git:
+      url: https://github.com/CodeEagle/flutter_inappwebview
+      ref: master
+
 
 dev_dependencies:
   flutter_test:
