--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   salomon_bottom_bar: ^3.3.1
   loading_icon_button: ^0.0.3
   cached_network_image: ^3.2.1
+  flutter_animated_dialog: ^2.0.1
   font_awesome_flutter: '>= 4.7.0'
 
   # Routing
