--- a/assets/themes/appainter_theme.json
+++ b/assets/themes/appainter_theme.json
@@ -112,6 +112,18 @@
     "tertiaryContainer": "#ff8a4324"
   },
   "dialogBackgroundColor": "#fffcfbfd",
+  "dialogTheme": {
+    "titleTextStyle": {
+      "color": "#ff246c8a",
+      "decoration": "none",
+      "fontFamily": "Prompt",
+      "fontWeight": "w700",
+      "fontSize": 24,
+      "inherit": true,
+      "letterSpacing": 0,
+      "textBaseline": "alphabetic"
+    }
+  },
   "disabledColor": "#61000000",
   "dividerColor": "#1f000000",
   "errorColor": "#ffb00020",
