--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -131,9 +131,9 @@ flutter_native_splash:
 
   android_12:
     image: assets/logos/logo.png
-    color: "#FFFFFF"
+    color: "#246c8a"
     image_dark: assets/logos/logo.png
-    color_dark: "#0B5371"
+    color_dark: "#8a4324"
 
   web: false
 
