--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -101,10 +101,12 @@ dependencies {
     implementation "androidx.multidex:multidex:2.0.1"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "com.google.android.gms:play-services-ads:21.2.0"
+    implementation "com.google.android.gms:play-services-basement:18.1.0"
 
-    implementation platform("com.google.firebase:firebase-bom:30.4.1")
+    implementation platform("com.google.firebase:firebase-bom:30.5.0")
 
-    implementation "com.google.firebase:firebase-appcheck-playintegrity"
-    implementation "com.google.firebase:firebase-appcheck-debug:16.0.1"
-    androidTestImplementation "com.google.firebase:firebase-appcheck-debug-testing:16.0.1"
+    implementation "com.google.firebase:firebase-analytics:21.1.1"
+    implementation "com.google.firebase:firebase-appcheck-playintegrity:16.0.2"
+    implementation "com.google.firebase:firebase-appcheck-debug:16.0.2"
+    androidTestImplementation "com.google.firebase:firebase-appcheck-debug-testing:16.0.2"
 }
