--- a/flutter_launcher_icons-dev.yaml
+++ b/flutter_launcher_icons-dev.yaml
@@ -1,7 +1,7 @@
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/logos/logo.png"
+  image_path: "assets/logos/logo_1024.png"
   adaptive_icon_foreground: "assets/logos/foreground.png"
   adaptive_icon_background: "assets/logos/background.png"
   remove_alpha_ios: true
