--- a/flutter_native_splash-dev.yaml
+++ b/flutter_native_splash-dev.yaml
@@ -1,13 +1,13 @@
 flutter_native_splash:
-  image: assets/logos/logo.png
-  background_image: assets/logos/background.png
-  image_dark: assets/logos/logo.png
-  background_image_dark: assets/logos/background.png
+  image: "assets/logos/logo_1024.png"
+  background_image: "assets/logos/background.png"
+  image_dark: "assets/logos/logo_1024.png"
+  background_image_dark: "assets/logos/background.png"
 
   android_12:
-    image: assets/logos/logo.png
     color: "#246c8a"
-    image_dark: assets/logos/logo.png
     color_dark: "#8a4324"
 
+  android: true
+  ios: true
   web: false
