--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,9 @@ dependencies:
   sqlite3_flutter_libs: ^0.5.9
 
   equatable: ^2.0.5
+  replay_bloc: ^0.2.2
   flutter_bloc: ^8.1.1
+  hydrated_bloc: ^8.1.0
   flutter_hooks: ^0.18.5+1
 
   # Google/Firebase deps
