--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,9 @@ dependencies:
   hydrated_bloc: ^9.0.0
   flutter_hooks: ^0.18.5+1
 
+  isar: ^3.0.2
+  isar_flutter_libs: ^3.0.2
+
   # Google/Firebase deps
   firebase_core: ^1.21.1
   google_mobile_ads: ^2.0.1
@@ -118,6 +121,8 @@ dev_dependencies:
   build_test: ^2.1.5
   build_runner: ^2.2.0
   build_verify: ^3.0.0
+
+  isar_generator: ^3.0.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
