--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,7 @@
             "name": "Biteshaq Dev",
             "request": "launch",
             "type": "dart",
+            "flutterMode": "debug",
             "program": "lib/main_dev.dart",
             "args": ["--flavor", "dev", "--target", "lib/main_dev.dart"],
         },
