--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,62 +36,62 @@ dependencies:
 
   # UI/UX
   flag: ^6.0.0
-  badges: ^2.0.3
+  badges: ^3.0.2
   sidebarx: ^0.14.0
   siri_wave: ^0.2.2
   card_swiper: ^2.0.4
-  json_theme: ^4.0.3+1
+  json_theme: ^4.0.3+2
   auto_animated: ^3.1.0
   cupertino_icons: ^1.0.5
   animated_shimmer: ^1.0.0
   salomon_bottom_bar: ^3.3.1
-  loading_icon_button: ^0.0.3
-  cached_network_image: ^3.2.1
+  loading_icon_button: ^0.0.5+1
+  cached_network_image: ^3.2.3
   flutter_animated_dialog: ^2.0.1
-  font_awesome_flutter: '>= 4.7.0'
+  font_awesome_flutter: '^10.3.0'
 
   # Routing
   beamer: ^1.5.3
 
   # Forms
-  flutter_form_builder: ^7.6.0
-  form_builder_validators: ^8.3.0
+  flutter_form_builder: ^7.7.0
+  form_builder_validators: ^8.4.0
   flutter_localizations:
     sdk: flutter
   intl: ^0.17.0
 
   # State Mgmt
-  drift: ^2.1.0
+  drift: ^2.5.0
   path: ^1.8.2
-  path_provider: ^2.0.11
-  sqlite3_flutter_libs: ^0.5.9
+  path_provider: ^2.0.12
+  sqlite3_flutter_libs: ^0.5.12
 
   equatable: ^2.0.5
-  replay_bloc: ^0.2.2
-  flutter_bloc: ^8.1.1
-  hydrated_bloc: ^9.0.0
+  replay_bloc: ^0.2.3
+  flutter_bloc: ^8.1.2
+  hydrated_bloc: ^9.1.0
   flutter_hooks: ^0.18.5+1
 
-  isar: ^3.0.4
-  isar_flutter_libs: ^3.0.4
+  isar: ^3.0.5
+  isar_flutter_libs: ^3.0.5
 
   # Google/Firebase deps
-  firebase_core: ^2.4.1
+  firebase_core: ^2.5.0
   google_mobile_ads: ^2.3.0
-  firebase_app_check: ^0.1.1+8
-  firebase_messaging: ^14.2.1
+  firebase_app_check: ^0.1.1+9
+  firebase_messaging: ^14.2.2
 
   # Plugins
   flutter_tts: ^3.6.3
   system_settings: ^2.1.0
-  connectivity_plus: ^2.1.0
-  package_info_plus: ^1.4.3+1
-  permission_handler: ^10.0.0
-  flutter_secure_storage: ^6.0.0
-  youtube_player_flutter: ^8.1.0
+  connectivity_plus: ^3.0.2
+  package_info_plus: ^3.0.2
+  permission_handler: ^10.2.0
+  flutter_secure_storage: ^7.0.1
+  youtube_player_flutter: ^8.1.2
   flutter_inappwebview: ^5.7.2+3
   native_device_orientation: ^1.1.4
-  flutter_local_notifications: ^9.9.1
+  flutter_local_notifications: ^13.0.0
 
 dependency_overrides:
   font_awesome_flutter:
@@ -103,24 +103,24 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  rename: ^2.0.1
+  rename: ^2.1.1
   flutter_config: ^2.0.0
   change_app_package_name: ^1.1.0
-  flutter_launcher_icons: ^0.10.0
-  flutter_native_splash: ^2.2.10+1
+  flutter_launcher_icons: ^0.11.0
+  flutter_native_splash: ^2.2.16
   
-  build_test: ^2.1.5
-  build_runner: ^2.2.0
-  build_verify: ^3.0.0
+  build_test: ^2.1.6
+  build_runner: ^2.3.3
+  build_verify: ^3.1.0
 
-  isar_generator: ^3.0.2
+  isar_generator: ^3.0.5
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
 
 flutter_native_splash:
   image: "assets/logos/logo_1024.png"
