--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,8 +47,6 @@ dependencies:
   salomon_bottom_bar: ^3.3.1
   loading_icon_button: ^0.0.5+1
   cached_network_image: ^3.2.3
-  flutter_animated_dialog: ^2.0.1
-  font_awesome_flutter: ^10.4.0
 
   # Routing
   beamer: ^1.5.3
@@ -88,12 +86,16 @@ dependencies:
   package_info_plus: ^3.0.3
   permission_handler: ^10.2.0
   flutter_secure_storage: ^8.0.0
-  youtube_player_flutter: ^8.1.2
   flutter_inappwebview: ^5.7.2+3
   native_device_orientation: ^1.1.4
   flutter_local_notifications: ^13.0.0
+  youtube_player_flutter:
+    git:
+      url: https://github.com/peterweb2005/youtube_player_flutter
+      ref: "fullscreen-landscape"
+      path: packages/youtube_player_flutter
 
-dependency_overrides:
+  # Local Packages
   font_awesome_flutter:
     path: ./packages/font_awesome_flutter
   flutter_animated_dialog:
